choose pilates image change on mobile + fixes

--- a/app/(home)/home.css
+++ b/app/(home)/home.css
@@ -7,7 +7,7 @@ html {
 }
 
 section {
-    @apply md:h-[90vh] h-[93vh];
+    @apply h-[90vh];
     scroll-snap-align: end;
 }
 
@@ -28,7 +28,7 @@ section {
 }
 
 .program {
-    @apply md:h-[90vh] h-[30vh] md:w-[50vw] flex flex-col justify-center items-center md:gap-0 md:rounded-none rounded-3xl md:m-0 m-3;
+    @apply md:h-[90vh] h-[40vh] md:w-[50vw] flex flex-col justify-center items-center md:gap-0 md:rounded-none rounded-3xl md:m-0 m-3;
 }
 
 .program a {
@@ -36,7 +36,7 @@ section {
 }
 
 .pilates {
-    background: url('/choosePilates.jpg');
+    @apply md:bg-[url('/choosePilates.jpg')] bg-[url('/choosePilatesMobile.jpg')];
     @apply bg-cover bg-right;
 }
 
